<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical">

    <include layout="@layout/tiltle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/car_name_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            android:text="@string/chezuhao"
            android:textColor="@color/black_01"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/car_name_b"
            android:layout_toRightOf="@+id/car_name_b"
            android:textColor="@color/black_02"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/carrage_name_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/car_name_b"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="9dp"
            android:text="@string/liangxu1"
            android:textColor="@color/black_01"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/carrage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/carrage_name_b"
            android:layout_toRightOf="@+id/carrage_name_b"
            android:textColor="@color/black_02"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/task_name_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/carrage_name_b"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="9dp"
            android:text="@string/zuoyecontent"
            android:textColor="@color/black_01"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/task_name_b"
            android:layout_toRightOf="@+id/task_name_b"
            android:textColor="@color/black_02"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/atitle_name_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/task_name_b"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="9dp"
            android:text="@string/zuoyexiangdian"
            android:textColor="@color/black_01"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/atitle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/atitle_name_b"
            android:layout_toRightOf="@+id/atitle_name_b"
            android:textColor="@color/black_02"
            android:textSize="14sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/state_name_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/wanchengqingkuang"
            android:textColor="@color/black_01"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/state_name_zhijian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="3">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hege" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buhege" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buhege"
                android:visibility="gone" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/state_name_shishi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wancheng" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weiwancheng"
                android:visibility="gone" />

        </RadioGroup>


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/beizhu"
        android:textColor="@color/black_01"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/des_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/bg_text"
        android:gravity="top|left"
        android:minLines="6"
        android:padding="12dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_btn_bg"
            android:gravity="center"
            android:text="@string/tijiao"
            android:textColor="@color/gray_01"
            android:textSize="16sp" />
    </RelativeLayout>


</LinearLayout>