<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/is_zhijian"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/gray_04"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/gaizaoxaingdian"
            android:textColor="#000000"
            android:textSize="12sp" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/yanshoubiaozhun"
            android:textColor="#000000"
            android:textSize="12sp" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/zuoyetiaojian"
            android:textColor="#000000"
            android:textSize="12sp" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />


        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/jobsate"
            android:textColor="#000000"
            android:textSize="12sp" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />


        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/zhiliangguanli"
            android:textColor="#000000"
            android:textSize="12sp" />

    </LinearLayout>
    <!--实施-->
    <LinearLayout
        android:id="@+id/is_shishi"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/gray_04"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/gaizaoxaingdian"
            android:textColor="#000000"
            android:textSize="12sp" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/fenxiantishi"
            android:textColor="#000000"
            android:textSize="12sp" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/zuoyetiaojian"
            android:textColor="#000000"
            android:textSize="12sp"/>

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />


        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/zhijianzhuangtai"
            android:textColor="#000000"
            android:textSize="12sp" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/wancheng"
            android:textColor="#000000"
            android:textSize="12sp"
            android:visibility="gone" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_04"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/hege"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>