<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ZuoYeDanHao"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/gray_05"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="作业单号"
            android:textColor="#000000"
            android:textSize="14sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/CheZuHao"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/gray_05"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/carsnum"
            android:textColor="#000000"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/LiangXu"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray_05"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/liangxu"
            android:textColor="#000000"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/ZuoYecontent"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/gray_05"
            android:ellipsize="end"
            android:gravity="right"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/jobcontent"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ZuoYeNeiRong"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray_05"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/more_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-50dip"
        android:layout_marginTop="5dip"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Content_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="16dip"
            android:textStyle="bold" />
    </LinearLayout>
    <include layout="@layout/item_hide_layout" />

</LinearLayout>