<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/split_line"
    android:orientation="vertical">

    <include
        android:id="@+id/table_title"
        layout="@layout/tiltle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/selectDate"
            android:layout_width="280dip"
            android:layout_height="50dp"
            android:layout_marginTop="5dip"
            android:background="@color/color2"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/select_date"
                android:textColor="@color/color4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:gravity="center"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/attachment_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/att_download_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/select_time"
            android:textColor="@color/color3"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/selectTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color2"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/current_time"
            android:textColor="@color/color4"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:gravity="center"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/color5"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/cars" />

                <LinearLayout
                    android:id="@+id/GaiZao_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip">

                    <Spinner
                        android:id="@+id/GaoZhiJian_CheZu_sp"
                        android:layout_width="220dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dip"
                        android:background="@drawable/spinner_bg"
                        android:gravity="center"
                        android:hint="DJ1-1"
                        android:singleLine="true"
                        android:textSize="14dp"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Look_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/XiangMu_Cbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/project" />

                <LinearLayout
                    android:id="@+id/GaiZaoShiShi_XiangMu_Parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/GaoZhiJian_XiangMu_sp"
                        android:layout_width="220dip"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dip"
                        android:background="@drawable/spinner_bg"
                        android:gravity="center"
                        android:hint="DJ1-1"
                        android:singleLine="true"
                        android:textSize="14dp"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/RemouldQuality_ChaXun_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/searchbtn" />
    </LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" />

    <include
        android:id="@+id/table_title"
        layout="@layout/remouldquality_item" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/R_Q_keybackfill_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/allhuitian_bg"
            android:text="整列回填" />

        <ListView
            android:id="@+id/RemouldQuality_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/R_Q_keybackfill_btn"
            android:cacheColorHint="@android:color/transparent"
            android:dividerHeight="8.0dip"
            android:fadingEdge="none"
            android:scrollbars="none" />
    </RelativeLayout>
</LinearLayout>